7-25 fixed profile alignment for different screens

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,8 +1,7 @@
 .header {
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   padding: 45px 0;
-  margin-bottom: 20px;
-  flex-shrink: 0;
+  /* margin-bottom: 20px; */
   font-family: "Inter", Arial, sans-serif;
 }
 .header__around-image {
@@ -39,10 +38,10 @@
 }
 
 @media screen and (max-width: 480px) {
-  .header {
-    min-height: 85px;
-    padding: 28px 0;
-  }
+  /* .header {
+    padding-right: 20px;
+    padding-left: 20px;
+  }  */
   .header::before {
     width: calc(100% + 40px);
   }
